Changed fan title

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Significa</title>
+    <title>William - AI/ML Engineer</title>
   </head>
 
   <body>
